--- a/basket/css/graphisme.css
+++ b/basket/css/graphisme.css
@@ -1,14 +1,4 @@
-html, body{
-    height:100%;
-    width:100%;
-    display:block;
 
-}
-/*body{
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-}*/
 .conteneur{
     height:100%;
     width:100%;
@@ -21,8 +11,9 @@ html, body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
-    height:100%;
-    max-height: auto;
+    padding-top: 150px;
+    padding-bottom: 150px;
+
 }
 
 .titre{
@@ -33,7 +24,19 @@ html, body{
 
 }
 
+.ombres{
+    text-shadow:0.1em 0.1em 0.9em black, 0 0 0.3em black;
+}
 
+/*Ligne horizontal*/
+.hrp{
+    width:90%;
+    background-color:white;
+}
+
+.nav-link{
+    font-size: 20px;
+}
 
 footer{
     bottom: 0;
