--- a/basket/css/graphisme.css
+++ b/basket/css/graphisme.css
@@ -95,6 +95,7 @@ input:focus {
   background-color: #CCC;
   -webkit-border-radius: 4px;
   border-radius: 4px;
+  opacity: 100%;
 }
 
 .form-connexion{
@@ -125,4 +126,8 @@ input:focus {
       margin-left: 20%;
       margin-right: 20%;
       width:auto;
+  }
+  
+  .img-actu{
+      width:100px;
   }
