--- a/basket/css/graphisme.css
+++ b/basket/css/graphisme.css
@@ -150,6 +150,7 @@ input:focus {
 }
 
 .navigbar{
+    margin-right: 0px;
     font-size: 25px;
     font-family: 'Baloo Thambi 2', cursive;
 }
@@ -163,3 +164,159 @@ input:focus {
     border-bottom: 4px solid #fe882a;
     color:#fe882a;
 }
+
+
+/*Bouton menu déroulant*/
+.boutonmenuprincipal {
+    background-color: #fe882a;
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 12px;
+    max-width: 70px;
+    margin:-10px;
+}
+.boutonmenuprincipal:hover {
+    background-color: #ffa862;
+}
+
+.dropdown-child {
+    position: absolute;
+    display: none;
+    background-color: #5e5e5e;
+    min-width: 50px;
+    margin-left:-1em;
+}
+
+.dropdown-child a {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+    border-bottom: 1px solid #535353;
+}
+.dropdown-child a:hover {
+    background-color: #fe882a;
+}
+
+.dropdown:hover .dropdown-child {
+    display: block;
+}
+
+
+
+
+.zoom {
+    background-color: green;
+    transition: transform .2s;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+}
+
+.zoom:hover {
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.5); 
+    filter: contrast(35%);
+}
+
+.zoom:hover info{
+    box-shadow:0 0 5px #fff;
+}
+
+
+
+
+
+.hovereffect {
+    width:700px;
+    height:460px;
+    overflow:hidden;
+    position:relative;
+    text-align:center;
+    cursor:default;
+}
+
+.hovereffect .overlay {
+    width:100%;
+    height:100%;
+    position:absolute;
+    overflow:hidden;
+    top:0;
+    left:0;
+    opacity:0;
+    background-color:rgba(0,0,0,0.5);
+    -webkit-transition:all .4s ease-in-out;
+    transition:all .4s ease-in-out
+}
+
+.hovereffect img {
+    display:block;
+    position:relative;
+    -webkit-transition:all .4s linear;
+    transition:all .4s linear;
+}
+
+.hovereffect h2 {
+    text-transform:uppercase;
+    color:#fff;
+    text-align:center;
+    position:relative;
+    font-size:25px;
+    background:rgba(0,0,0,0.6);
+    -webkit-transform:translatey(-100px);
+    -ms-transform:translatey(-100px);
+    transform:translatey(-100px);
+    -webkit-transition:all .2s ease-in-out;
+    transition:all .2s ease-in-out;
+    padding:20px;
+}
+
+.hovereffect a.info {
+    text-decoration:none;
+    display:inline-block;
+    text-transform:uppercase;
+    color:#fff;
+    border:1px solid #fff;
+    background-color:transparent;
+    opacity:0;
+    filter:alpha(opacity=0);
+    -webkit-transition:all .2s ease-in-out;
+    transition:all .2s ease-in-out;
+    margin-top:130px;
+    margin-bottom: auto;
+    padding:10px 50px;
+}
+
+.hovereffect a.info:hover {
+    box-shadow:0 0 5px #fff;
+}
+
+.hovereffect:hover img {
+    -ms-transform:scale(1.2);
+    -webkit-transform:scale(1.2);
+    transform:scale(1.2);
+}
+
+.hovereffect:hover .overlay {
+    opacity:1;
+    filter:alpha(opacity=100);
+}
+
+.hovereffect:hover h2,.hovereffect:hover a.info {
+    opacity:1;
+    filter:alpha(opacity=100);
+    -ms-transform:translatey(0);
+    -webkit-transform:translatey(0);
+    transform:translatey(0);
+}
+
+.hovereffect:hover a.info {
+    -webkit-transition-delay:.2s;
+    transition-delay:.2s;
+}
+
+.col-md-12 logonav{
+    display: none;
+} 
