Add : - 24/03/20 23:21 - Modification du fichier creer_action: 	|- Ajout de listes déroulantes avec les noms complets 	|- Ajout vérification JS 	|- Ajout verification php
Modification du fichier modifier_sponsor :
	| Affichage des noms complets en version read-only grisé

--- a/basket/css/graphisme.css
+++ b/basket/css/graphisme.css
@@ -149,6 +149,10 @@ input:focus {
     color:#fe882a;
 }
 
+.bg-orange{
+    background-color:#fe882a;
+}
+
 .navigbar{
     margin-right: 0px;
     font-size: 25px;
@@ -317,6 +321,3 @@ input:focus {
     transition-delay:.2s;
 }
 
-.col-md-12 logonav{
-    display: none;
-} 
