--- a/basket/css/graphisme.css
+++ b/basket/css/graphisme.css
@@ -328,7 +328,7 @@ input:focus {
     color: red;
     font-weight: bold;
 }
-.alert-success{
+.alert-success, .alert-warning , .alert-info{
     position:static;
 }
 @media (max-width: 720px) {
